// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normal 1`] = `
Array [
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "children": undefined,
        "exact": true,
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "parentKeys": Array [
          "/",
          "/admin",
        ],
        "path": "/admin/sub-page",
        "routes": null,
        "unaccessible": false,
      },
    ],
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "children": undefined,
    "exact": true,
    "key": "/admin/sub-page",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "parentKeys": Array [
      "/",
      "/admin",
    ],
    "path": "/admin/sub-page",
    "routes": null,
    "unaccessible": false,
  },
]
`;

exports[`test router 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "exact": true,
            "icon": Object {
              "_owner": null,
              "_store": Object {},
              "key": null,
              "props": Object {},
              "ref": null,
              "type": Object {},
            },
            "key": "/welcome/repertoryFw",
            "locale": "menu.welcome.one.two",
            "name": "two",
            "parentKeys": Array [
              "/",
              "welcome",
              "/welcome",
            ],
            "path": "/welcome/repertoryFw",
            "routes": null,
          },
          Object {
            "exact": true,
            "icon": Object {
              "_owner": null,
              "_store": Object {},
              "key": null,
              "props": Object {},
              "ref": null,
              "type": Object {},
            },
            "key": "/welcome/repertory",
            "locale": "menu.welcome.one.two2",
            "name": "two2",
            "parentKeys": Array [
              "/",
              "welcome",
              "/welcome",
            ],
            "path": "/welcome/repertory",
            "routes": null,
          },
        ],
        "icon": Object {
          "_owner": null,
          "_store": Object {},
          "key": null,
          "props": Object {},
          "ref": null,
          "type": Object {},
        },
        "key": "/welcome",
        "locale": "menu.welcome.one",
        "name": "one",
        "parentKeys": Array [
          "/",
          "welcome",
        ],
        "path": "/welcome",
        "routes": null,
      },
    ],
    "icon": Object {
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {},
      "ref": null,
      "type": Object {},
    },
    "key": "welcome",
    "locale": "menu.welcome",
    "name": "welcome",
    "parentKeys": Array [
      "/",
    ],
    "path": "/",
    "routes": null,
  },
  Object {
    "children": Array [
      Object {
        "exact": true,
        "icon": Object {
          "_owner": null,
          "_store": Object {},
          "key": null,
          "props": Object {},
          "ref": null,
          "type": Object {},
        },
        "key": "/welcome/repertoryFw",
        "locale": "menu.welcome.one.two",
        "name": "two",
        "parentKeys": Array [
          "/",
          "welcome",
          "/welcome",
        ],
        "path": "/welcome/repertoryFw",
        "routes": null,
      },
      Object {
        "exact": true,
        "icon": Object {
          "_owner": null,
          "_store": Object {},
          "key": null,
          "props": Object {},
          "ref": null,
          "type": Object {},
        },
        "key": "/welcome/repertory",
        "locale": "menu.welcome.one.two2",
        "name": "two2",
        "parentKeys": Array [
          "/",
          "welcome",
          "/welcome",
        ],
        "path": "/welcome/repertory",
        "routes": null,
      },
    ],
    "icon": Object {
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {},
      "ref": null,
      "type": Object {},
    },
    "key": "/welcome",
    "locale": "menu.welcome.one",
    "name": "one",
    "parentKeys": Array [
      "/",
      "welcome",
    ],
    "path": "/welcome",
    "routes": null,
  },
  Object {
    "exact": true,
    "icon": Object {
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {},
      "ref": null,
      "type": Object {},
    },
    "key": "/welcome/repertoryFw",
    "locale": "menu.welcome.one.two",
    "name": "two",
    "parentKeys": Array [
      "/",
      "welcome",
      "/welcome",
    ],
    "path": "/welcome/repertoryFw",
    "routes": null,
  },
]
`;

exports[`var path 1`] = `
Array [
  Object {
    "children": undefined,
    "exact": true,
    "key": "/list/:id",
    "locale": "menu.list.table.result",
    "name": "数据详情",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list/:id",
    "routes": null,
    "unaccessible": false,
  },
]
`;
